--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ streamlit>=1.22.0
 python-pptx>=0.6.21
 requests>=2.28.1
 python-dotenv>=0.21.0
+openai>=0.27.0
+docx2txt>=0.8
+PyPDF2>=3.0.0
+pandas>=1.5.0
+audio-recorder-streamlit>=0.0.8
