--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,22 @@
-streamlit>=1.22.0
-python-pptx>=0.6.21
-requests>=2.28.1
-python-dotenv>=0.21.0
-openai>=0.27.0
-docx2txt>=0.8
-PyPDF2>=3.0.0
-pandas>=1.5.0
-audio-recorder-streamlit>=0.0.8
+accelerate==1.4.0
+altair==4.2.2
+audio-recorder-streamlit==0.0.10
+docx2txt==0.8
+gtts==2.5.4
+huggingface-hub==0.29.2
+numpy==2.1.3
+openai==1.65.4
+openai-whisper==20240930
+pandas==2.2.3
+pillow==11.1.0
+python-dotenv==1.0.1
+python-pptx==0.6.21
+PyPDF2==3.0.1
+requests==2.32.3
+spacy==3.8.4
+en-core-web-sm==3.8.0
+streamlit==1.43.0
+torch==2.6.0+cu118
+torchvision==0.21.0+cu118
+torchaudio==2.6.0+cu118
+transformers==4.49.0
